# Base-Code-Workshops

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/my_cli_app/: app.py  utils.py
