[tool.poetry]
name = "my_cli_app"
version = "0.1.0"
description = "Example CLI app with Typer, Poetry, and code quality tools using src layout."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "my_cli_app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "^0.12.3" }

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.13.2"
flake8 = "^7.1.0"
pylint = "^3.2.0"
bandit = "^1.7.9"
precommit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli = "my_cli_app.app:main"

# Style configurations
[tool.black]
line-length = 88

[tool.isort]
profile = "black"
